
set(GRAMMAR_FILES
	authdb-file-grammar
)

install(FILES ${GRAMMAR_FILES}
	DESTINATION ${BELR_GRAMMARS_DIR}
	PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
)

if(ENABLE_VOICEMAIL)
	set(VOICEMAIL_ANNOUNCE_FILES
		voicemail/default-announce.wav
		voicemail/leave-a-message.wav
	)

	install(FILES ${VOICEMAIL_ANNOUNCE_FILES}
		DESTINATION ${VOICEMAIL_ANNOUNCES_DIR}
		PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
	)
endif()